--- a/src/css/contactMe.css
+++ b/src/css/contactMe.css
@@ -5,7 +5,6 @@
     flex-direction: column;
     justify-content: center;
     margin: 0 auto;
-    padding: 0 4.4rem 4.4rem;
     height: 100vh;
 }
 
@@ -24,12 +23,12 @@
     color: #e9ecef;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 65%;
     margin: 0 auto;
     margin-bottom: 2.2rem;
-    padding: 4.4rem;
+    padding: 1rem;
     position: relative;
-    width: 65%;
+    width: 60%;
 }
 
 .contactMeForm button {
@@ -43,6 +42,7 @@
     transition: all 0.7s;
     text-transform: uppercase;
 }
+
 .contactMeForm button:hover {
     zoom: 115%;
 }
@@ -68,6 +68,9 @@
     width: 100%;
     border-bottom: 1px solid #868e96;
     border-radius: 6px;
+    font-size: 15px;
+    color: #ffffff;
+    font-weight: 500;
 }
 
 .inputContainer textarea {
@@ -75,6 +78,13 @@
     border-radius: 6px;
     padding: .8rem;
     width: 100%;
+    font-size: 15px;
+    color: #ffffff;
+    font-weight: 500;
+    height: 100px;
+    width: 420px;
+    max-height: 700px;
+    max-width: 700px;
 }
 
 .inputContainer .errorMessage {
