--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -1,12 +1,73 @@
-
-
 .portfolio {
     height: 100vh;
     display: flex;
     flex-direction: column;
     text-align: center;
     justify-content: center;
-    padding: 20px;
     margin: 0 auto;
-    max-width: 575px;
+    min-width: 575px;
+
+}
+
+#bg-video,
+.bg-video {
+    height: 100%;
+    left: 0;
+    object-fit: cover;
+    position: relative;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: -1;
+}
+
+.video-overlay {
+    height: 100vh;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: -1;
+}
+
+h1 span {
+    color: #be09f5;
+}
+
+h1 {
+    font-size: 2.5em;
+    margin: 2px;
+}
+
+h2 {
+    font-size: 1.5em;
+    font-weight: 400;
+}
+
+a {
+    color: #be09f5;
+    text-decoration: none;
+    border: 1px solid #be09f5;
+    padding: 20px;
+    font-weight: 700;
+    border-radius: 5px;
+    transition: all 0.3s;
+    width: 200px;
+    margin: 0 auto;
+}
+
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.fade-in-up {
+    animation: fadeInUp 2s ease-out forwards;
 }
