--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -44,7 +44,7 @@ h2 {
     font-weight: 400;
 }
 
-a {
+.portfolio a {
     color: #be09f5;
     text-decoration: none;
     border: 1px solid #be09f5;
