--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,14 @@ body {
     align-items: center;
     margin: 0;
     padding: 0;
+    
 }
 html {
     scroll-behavior: smooth;
+    
+}
+body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
 }
