--- a/src/css/contactMe.css
+++ b/src/css/contactMe.css
@@ -5,9 +5,10 @@
     flex-direction: column;
     justify-content: center;
     margin: 0 auto;
-    height: 100vh;
+    min-height: 100vh;
+    height: fit-content;
     width: 100%;
-
+    max-width: 100vw;
 }
 
 .contactMeTitle {
@@ -84,7 +85,7 @@
     color: #ffffff;
     font-weight: 500;
     height: 100px;
-    width: 420px;
+    width: 300px;
     max-height: 700px;
     max-width: 700px;
 }
