--- a/src/css/aboutMe.css
+++ b/src/css/aboutMe.css
@@ -8,14 +8,13 @@
     justify-content: center;
     align-items: center;
     max-width: 100vw;
-
+    gap: 5rem;
 }
 
 .aboutMeContainer {
     display: flex;
     flex-direction: row;
     height: 100%;
-    flex-wrap: wrap;
 }
 
 .aboutMeContent {
