--- a/src/css/contactMe.css
+++ b/src/css/contactMe.css
@@ -32,6 +32,7 @@
     padding: 1rem;
     position: relative;
     width: 60%;
+    position: relative;
 }
 
 .contactMeForm button {
@@ -85,7 +86,7 @@
     color: #ffffff;
     font-weight: 500;
     height: 100px;
-    width: 300px;
+    width: 400px;
     max-height: 700px;
     max-width: 700px;
 }
@@ -94,4 +95,38 @@
     color: red;
     margin-bottom: -0.8rem;
     font-weight: 300;
+}
+
+/* Add a background overlay when the spinner is shown */
+.contactMeForm .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 1;
+}
+
+.spinner {
+    position: absolute;
+    top: 40%;
+    transform: translate(-50%, -50%);
+    border: 8px solid rgba(255, 255, 255, 0.3);
+    border-top: 8px solid #3498db;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    animation: spin 1s linear infinite;
+    z-index: 2;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
