--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+
 body {
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
@@ -8,14 +9,24 @@ body {
     align-items: center;
     margin: 0;
     padding: 0;
-    
+
 }
+
 html {
     scroll-behavior: smooth;
-    
+
 }
-body, html {
+
+body,
+html {
     margin: 0;
     padding: 0;
     height: 100%;
+}
+
+@media (max-width: 768px) {
+    body {
+        font-size: 12px;
+
+    }
 }
