--- a/src/css/aboutMe.css
+++ b/src/css/aboutMe.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     min-height: 100vh;
     height: fit-content;
-    width:100%;
+    width: 100%;
     justify-content: center;
     align-items: center;
     max-width: 100vw;
@@ -29,6 +29,7 @@
 .aboutMeContent ul {
     list-style-type: none;
     padding: 0;
+    min-width: 450px;
 }
 
 .aboutMeContent li {
@@ -43,7 +44,8 @@
 
 .aboutMeHeader {
     display: flex;
-    width: 370px;
+    min-width: 370px;
+    max-width: 370px;
     flex-direction: column;
     justify-content: center;
     text-align: center;
@@ -54,7 +56,7 @@
 .socialMedia {
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    width: 95%;
     margin-top: 5.5%;
 }
 
@@ -122,5 +124,53 @@
 
     100% {
         transform: translateX(-100%);
+    }
+}
+
+@media only screen and (max-width: 768px) {
+        .aboutMeContainer {
+        flex-wrap: wrap;
+    }
+
+    .aboutMe h1 {
+        margin-top: 5rem;
+        font-size: 29px;
+    }
+
+    .aboutMe h2 {
+        width: 80%;
+        display: inline-block;
+    }
+
+
+    .aboutMeContent .text {
+        font-size: 15px;
+    }
+
+    .aboutMeContent li .icon {
+        margin-right: 10px;
+    }
+
+    .socialMedia {
+        justify-content: center;
+        gap: 15px;
+        margin-top: 0;
+    }
+
+    .skillsList {
+        width: 85%;
+        margin-bottom: 3rem;
+    }
+
+    .aboutMe {
+        gap: 2rem;
+    }
+    .aboutMeHeader {
+        width: auto;
+        min-width: auto;
+        max-width: auto;
+    }
+    .aboutMeContent ul {
+        min-width: auto;
     }
 }
