--- a/src/css/certification.css
+++ b/src/css/certification.css
@@ -13,8 +13,8 @@
 
 .certificationHeader {
     text-align: center;
-    margin-bottom:3rem;
-
+    margin-bottom:2rem;
+    margin-top:6rem;
 }
 
 .certificationHeader h1 {
@@ -40,7 +40,7 @@
     display: flex;
     flex-direction: column;
     max-width: 550px;
-    min-height: 250px;
+    min-height: fit-content;
     border-radius: 10px;
     background-color: rgb(221, 220, 220);
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.2);
@@ -50,7 +50,7 @@
     align-items: center;
     text-align: center;
     text-decoration: none;
-    justify-content: space-between;
+    justify-content: space-evenly;
     
 }
 .certificationContainer .card .info {
@@ -78,4 +78,25 @@
     margin: auto;
 }
 
+@media only screen and (max-width: 768px) {
+        .certificationContainer {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .certificationContainer .card {
+        width: 80%;
+    }
+    .certificationContainer .card img {
+        width: 80px;
+        height: 80px;
+    }
+    .certificationContainer .card p{
+        margin: auto;
+    }
+    .certificationContainer .card p:first-child{
+        font-weight: 700;
+        margin: auto;
+    }
+}
 
