--- a/src/css/contactMe.css
+++ b/src/css/contactMe.css
@@ -130,3 +130,29 @@
         transform: rotate(360deg);
     }
 }
+
+@media only screen and (max-width: 768px) {
+    .contactMeForm {
+        width: 80%;
+    }
+
+    .inputContainer {
+        width: 80%;
+    }
+
+
+    .inputContainer input {
+        background-color: #3b4957;
+        padding: .8rem;
+        width: 100%;
+        border-bottom: 1px solid #868e96;
+        border-radius: 6px;
+        font-size: 15px;
+        color: #ffffff;
+        font-weight: 500;
+    }
+
+    .inputContainer textarea {
+        width: 100%;
+    }
+}
