--- a/src/css/education.css
+++ b/src/css/education.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    height: fit-content ;
+    height: fit-content;
     width: 100%;
     justify-content: center;
     align-items: center;
@@ -13,7 +13,7 @@
 
 .educationHeader {
     text-align: center;
-    margin-bottom:3rem;
+    margin-bottom: 3rem;
 
 }
 
@@ -61,14 +61,50 @@
     border-radius: 10px;
 }
 
-.card h2{
-    font-weight: 700 ;
+.card h2 {
+    font-weight: 700;
 }
 
 .card h3 {
     font-weight: 300;
 }
+
 .card p {
     font-weight: 300;
     font-size: 18px;
+}
+
+@media only screen and (max-width: 768px) {
+    .educationHeader {
+        margin-top: 5rem;
+        margin-bottom: 2rem;
+    }
+
+    .card h2 {
+        font-weight: 700;
+    }
+
+    .card h3 {
+        font-size: 15px;
+        font-weight: 300;
+    }
+
+    .card p {
+        font-weight: 300;
+        font-size: 14px;
+    }
+
+    .card img {
+        width: 100%;
+        height: 180px;
+    }
+
+    .card {
+        min-height: 400px;
+        transition: all 0.5s;
+    }
+
+    .educationContainer {
+        margin-bottom: 3rem;
+    }
 }
