--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -13,11 +13,10 @@
     margin: 0 auto;
     min-width: fit-content;
 }
-.footer .socialMedia {
-    display: flex;
-    justify-content: space-evenly;
-    width: 15%;
-    margin-top: 0;
+.footer .socialMedia  {
+    margin: 0 auto;
+    justify-content: center;
+    gap: 1rem;
 }
 .footer .socialMedia img {
     width: 45px;
