--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,35 @@ html {
     padding: 0;
     height: 100%;
 }
+@keyframes moveRight {
+    0% {
+        transform: translateX(0);
+    }
 
+    100% {
+        transform: translateX(-100%);
+    }
+}
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
 @media (max-width: 768px) {
     body {
         font-size: 12px;
