--- a/src/css/aboutMe.css
+++ b/src/css/aboutMe.css
@@ -120,17 +120,9 @@
     border-radius: 20px;
 }
 
-@keyframes moveRight {
-    0% {
-        transform: translateX(0);
-    }
 
-    100% {
-        transform: translateX(-100%);
-    }
-}
 
-@media only screen and (max-width: 768px) {
+@media (max-width: 768px) {
         .aboutMeContainer {
         flex-wrap: wrap;
     }
