--- a/src/css/certification.css
+++ b/src/css/certification.css
@@ -93,7 +93,7 @@
   }
   
 
-@media only screen and (max-width: 768px) {
+@media  (max-width: 768px) {
         .certificationContainer {
         flex-direction: column;
         align-items: center;
