--- a/src/css/contactMe.css
+++ b/src/css/contactMe.css
@@ -121,17 +121,9 @@
     z-index: 2;
 }
 
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
 
-    100% {
-        transform: rotate(360deg);
-    }
-}
 
-@media only screen and (max-width: 768px) {
+@media (max-width: 768px) {
     .contactMeForm {
         width: 80%;
     }
