--- a/src/css/contactMe.css
+++ b/src/css/contactMe.css
@@ -20,24 +20,23 @@
 }
 
 .contactMeForm {
+    display: flex;
     align-items: center;
     background-color: #060a0f;
     border-radius: 14px;
     color: #e9ecef;
-    display: flex;
     flex-direction: column;
-    height: 65%;
-    margin: 0 auto;
     margin-bottom: 2.2rem;
     padding: 1rem;
     position: relative;
-    width: 60%;
-    position: relative;
+    width: 40%;
 }
 
 .contactMeForm button {
-    background-color: initial;
+    /* degradation */
+    background-color: linear-gradient(#c834db, #3498db);
     border: 1px solid #888;
+    border-radius: 15px;
     color: #fff;
     cursor: pointer;
     padding: 1rem 4.2rem;
@@ -45,40 +44,53 @@
     font-size: large;
     transition: all 0.7s;
     text-transform: uppercase;
+    width: 100%;
 }
 
 .contactMeForm button:hover {
-    zoom: 115%;
+    transform: scale(1.05);
 }
 
+.inputFields {
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    width: 100%;
+    gap: 20px;
+}
 
 
 .inputContainer {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 30%;
+    align-items: start;
     margin-top: 1.8rem;
+    width: 100%;
+
 }
 
 .inputContainer label {
     font-size: 17px;
     margin-bottom: 1.2rem;
+    width: 100%;
 }
 
 .inputContainer input {
     background-color: #3b4957;
     padding: .8rem;
     width: 100%;
-    border-bottom: 1px solid #868e96;
+    border: none;
     border-radius: 6px;
     font-size: 15px;
     color: #ffffff;
     font-weight: 500;
+    box-sizing: border-box;
+
 }
 
 .inputContainer textarea {
     background-color: #3b4957;
+    border: none;
     border-radius: 6px;
     padding: .8rem;
     width: 100%;
@@ -86,14 +98,12 @@
     color: #ffffff;
     font-weight: 500;
     height: 100px;
-    width: 400px;
     max-height: 700px;
-    max-width: 700px;
+    box-sizing: border-box;
 }
 
 .inputContainer .errorMessage {
     color: red;
-    margin-bottom: -0.8rem;
     font-weight: 300;
 }
 
