--- a/src/css/education.css
+++ b/src/css/education.css
@@ -30,7 +30,7 @@
 }
 .selected {
     position:absolute;
-    background-color: #151030;
+    background-color: #BE09F5;
     width: 100%;
     height: 32.5%;
     border-radius: 10px;
@@ -73,11 +73,10 @@
 }
 .card {
     width: 100%;
-    display: flex;
     min-width: 250px;
-    min-height: 400px;
+    min-height: 435px;
     max-width: 700px;
-    background-color: #151030;
+    background-color: #be09f5a1;
     border-radius: 10px;
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.2);
     transition: all 0.5s;
@@ -88,7 +87,7 @@
 
 .card p {
     font-weight: 300;
-    font-size: 18px;
+    font-size: 17px;
 }
 
 @media (max-width: 768px) {
