--- a/src/css/contactMe.css
+++ b/src/css/contactMe.css
@@ -34,7 +34,7 @@
 
 .contactMeForm button {
     /* degradation */
-    background-color: linear-gradient(#c834db, #3498db);
+    background: linear-gradient(to right, #c834db, #3498db);
     border: 1px solid #888;
     border-radius: 15px;
     color: #fff;
