Contact me form styles

--- a/src/css/contactMe.css
+++ b/src/css/contactMe.css
@@ -135,13 +135,11 @@
 
 @media (max-width: 768px) {
     .contactMeForm {
-        width: 80%;
+        width: 85%;
     }
 
-    .inputContainer {
-        width: 80%;
-    }
-    .inputContainer textarea {
-        width: 100%;
+
+    .inputContainer label {
+        font-size: 15px;
     }
 }
