--- a/src/css/education.css
+++ b/src/css/education.css
@@ -30,7 +30,7 @@
 }
 .selected {
     position:absolute;
-    background-color: #BE09F5;
+    background: linear-gradient(to left, #c834db, #3498db);
     width: 100%;
     height: 32.5%;
     border-radius: 10px;
@@ -76,7 +76,7 @@
     min-width: 250px;
     min-height: 435px;
     max-width: 700px;
-    background-color: #be09f5a1;
+    background: linear-gradient(to right, #c834db, #3498db);
     border-radius: 10px;
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.2);
     transition: all 0.5s;
