--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -37,14 +37,17 @@ h1 span {
     color: #be09f5;
 }
 
-h1 {
+.portfolio h1 {
     font-size: 2.5em;
     margin: 2px;
+    animation: fadeIn 2s ease-out forwards;
+
 }
 
-h2 {
+.portfolio h2 {
     font-size: 1.5em;
     font-weight: 400;
+    animation: fadeIn 2s ease-out forwards;
 }
 
 .portfolio a {
