--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,11 @@ html {
     height: 100%;
 }
 
-.intro.fadeInUp {
+.intro.fadeInUp{
     animation: fadeInUp 2s ease-out forwards;
+}
+.skillsList.scaleUp {
+    animation: scaleUp 2s ease-out forwards;
 }
 
 .aboutMeContent li .text.moveRight, .card.moveRight {
@@ -42,15 +45,14 @@ html {
 }
 
 
-@keyframes skillConveyor {
+@keyframes skillConveyorAnimation {
     0% {
-        transform: translateX(0);
+      transform: translateX(0);
     }
-
     100% {
-        transform: translateX(-100%);
+      transform: translateX(-33.33%);
     }
-}
+  }
 
 @keyframes moveRight {
     0% {
@@ -113,7 +115,7 @@ html {
 @keyframes scaleUp {
     0% {
         opacity: 0;
-        transform: scale(0.8);
+        transform: scale(0);
     }
 
     100% {
