--- a/src/App.css
+++ b/src/App.css
@@ -24,24 +24,36 @@ html {
     height: 100%;
 }
 
-.intro.fadeInUp{
+.intro.fadeInUp,
+.contactMeTitle.fadeInUp{
     animation: fadeInUp 2s ease-out forwards;
+}
+.contactMeTitle.fadeIn{
+    animation: fadeIn 2s ease-out forwards;
 }
 .skillsList.scaleUp {
     animation: scaleUp 2s ease-out forwards;
 }
+.contactMeForm.moveUp  {
+    animation: moveUp 1s ease-out forwards;
+}
+.selected.scaleUp,
+.socialMedia.scaleUp,
+.inputContainer.scaleUp,
+.submitBtn.scaleUp {
+    
+    animation: scaleUp 1s ease-out forwards;
+}
 
-.aboutMeContent li .text.moveRight, .card.moveRight {
+.aboutMeContent li .text.moveRight, .card.moveRight, .card.moveRight {
     animation: moveRight 1s ease-out forwards;
 }
 .card.moveLeft {
     animation: moveLeft 1s ease-out forwards;
 }
-.socialMedia.scaleUp {
-    animation: scaleUp 1s ease-out forwards;
-}
-.certificationHeader.fadeInDown {
-    animation: fadeInDown 1s ease-out forwards;
+.certificationHeader.fadeInDown,
+.educationHeader.fadeInDown {
+    animation: fadeInDown 2s ease-out forwards;
 }
 
 
@@ -74,6 +86,15 @@ html {
 
     100% {
         opacity: 1;
+        transform: translateY(0);
+    }
+}
+@keyframes moveUp {
+    0% {
+        transform: translateY(150px);
+    }
+
+    100% {
         transform: translateY(0);
     }
 }
