--- a/src/css/education.css
+++ b/src/css/education.css
@@ -35,7 +35,7 @@
     height: 32.5%;
     border-radius: 10px;
     z-index: 1;
-    transition: all 0.5s ease-in-out;
+    transition: transform 0.5s ease-in-out;
 }
 .buttons{
     position: relative;
@@ -83,6 +83,9 @@
     color: white;
     padding: 1rem;
     box-sizing: border-box;
+}
+.card:nth-child(even) {
+    background: linear-gradient(to right, #3498db, #c834db);
 }
 
 .card p {
