--- a/src/css/header.css
+++ b/src/css/header.css
@@ -11,6 +11,7 @@
     transition: background-color 0.3s ease;
     width: 100%;
     max-width: 100vw;
+    animation: scaleUp 1s ease-out forwards;
 }
 
 .Header.scrolled {
@@ -18,6 +19,7 @@
 }
 
 .Header img {
+    
     width: 80px;
     margin-left: 1rem;
 }
@@ -28,7 +30,7 @@
 }
 
 .Header a {
-    color: #fff;
+    color: #f6d8ff;
     text-decoration: none;
 }
 
