Added colors to root, cards component refactor to add another type of cards

--- a/src/css/aboutMe.css
+++ b/src/css/aboutMe.css
@@ -95,7 +95,7 @@
   
   .skillConveyor {
     display: flex;
-    color: white;
+    color: var(--white);
     flex-direction: row;
     gap: 20px;
     justify-content: center;
