--- a/src/css/certification.css
+++ b/src/css/certification.css
@@ -18,10 +18,8 @@
 }
 
 .certificationHeader h1 {
-    color: white;
+    color:var(--white);
 }
-
-
 
 .certificationContainer {
     display: flex;
