--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
-
+:root {
+    /* Colors */
+    --purple: #be09f5;
+    --blue: #3498db;
+    --black: #000000;
+    --white: #ffffff; 
+    --gray: #060a0f; 
+}
 body {
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
     font-size: 15px;
     color: white;
-    background-color: black;
+    background-color: var(--black);
     align-items: center;
     margin: 0;
     padding: 0;
