--- a/src/css/education.css
+++ b/src/css/education.css
@@ -1,5 +1,5 @@
 .education {
-    background-color: #000;
+    background-color: var(--black);
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -30,7 +30,7 @@
 }
 .selected {
     position:absolute;
-    background: linear-gradient(to left, #c834db, #3498db);
+    background: linear-gradient(to left, var(--purple), #3498db);
     width: 100%;
     height: 32.5%;
     border-radius: 10px;
@@ -76,16 +76,16 @@
     min-width: 250px;
     min-height: 435px;
     max-width: 700px;
-    background: linear-gradient(to right, #c834db, #3498db);
+    background: linear-gradient(to right, var(--purple), #3498db);
     border-radius: 10px;
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.2);
     transition: all 0.5s;
-    color: white;
+    color:var(--white);
     padding: 1rem;
     box-sizing: border-box;
 }
 .card:nth-child(even) {
-    background: linear-gradient(to right, #3498db, #c834db);
+    background: linear-gradient(to right, #3498db, var(--purple));
 }
 
 .card p {
