--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -4,7 +4,7 @@
     text-align: center;
     align-items: center;
     justify-content: center;
-    background-color: #000;
+    background-color: var(--black);
     width: 100%;
     max-width: 100vw;
     height: 100px;
