--- a/src/css/project.css
+++ b/src/css/project.css
@@ -12,9 +12,10 @@
   gap: 5rem;
 
 }
+
 .projects {
   display: grid;
-  grid-template-columns: repeat(3, auto);
+  grid-template-columns: repeat(2, auto);
   grid-gap: 50px;
 }
 
@@ -27,35 +28,33 @@
 }
 
 
-.card-project h2,
-.card__description{
-  margin: 0;
+.card__description {
+  --flow-space: 0.9375rem;
+  margin-top: var(--flow-space, 1em);
+  font-weight: 600;
 }
 
 
 
-.card-project h2 {
+.projects h2 {
   font-size: 2.25rem;
   color: var(--white);
   line-height: 1.1;
 }
 
- p {
+.projects p {
   font-size: 1rem;
   line-height: 1.5;
-  color: var(--white);
 }
 
-.flow>*+* {
-  margin-top: var(--flow-space, 1em);
-}
+
 
 
 .card-project {
+
   display: grid;
   place-items: center;
-  width: 80vw;
-  max-width: 21.875rem;
+  max-width: 40rem;
   height: 28.125rem;
   overflow: hidden;
   border-radius: 0.625rem;
@@ -68,23 +67,23 @@
 }
 
 .card__background {
-  object-fit: cover;
   max-width: 100%;
   height: 100%;
 }
 
 .card__content {
-  --flow-space: 0.9375rem;
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-self: flex-end;
-  height: 55%;
+  height: 100%;
   padding: 12% 1.25rem 1.875rem;
   background: linear-gradient(180deg,
       hsla(0, 0%, 0%, 0) 0%,
       hsla(0, 0%, 0%, 0.3) 10%,
       hsl(0, 0%, 0%) 100%);
+  min-width: 100%;
 }
 
 .card__content--container {
@@ -107,9 +106,45 @@
   background-color: var(--purple);
 }
 
+.card__button {
+  padding: 0.75em 1.6em;
+  width: fit-content;
+  width: -moz-fit-content;
+  font-weight: bold;
+  border-radius: 0.45em;
+  background: transparent;
+  border: 1px solid var(--purple);
+  font-family: var(--font-title);
+  font-size: 1.125rem;
+  color: var(--purple);
+  cursor: pointer;
+  text-decoration: none;
+}
 
 
+.card__buttons {
+  display: flex;
+  gap: 2rem;
+  height: fit-content;
+}
 
+.card__tech-stack {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.card__tech-stack p {
+  width: fit-content;
+  color: var(--blue);
+  border-radius: 10px;
+  cursor: default;
+}
+
+.card__tech-stack p:nth-child(even) {
+  color: var(--purple);
+}
 
 @media (any-hover: hover) and (any-pointer: fine) {
   .card__content {
@@ -117,6 +152,7 @@
     transition: transform 500ms ease-out;
     transition-delay: 500ms;
   }
+
 
   .card__title::after {
     opacity: 0;
@@ -135,40 +171,69 @@
     transition: transform 500ms ease-out, opacity 500ms ease-out;
   }
 
-  .card-project:hover,
-  .card-project:focus-within {
+  .card-project:hover {
     transform: scale(1.05);
     transition: transform 500ms ease-in;
   }
 
-  .card-project:hover .card__content,
-  .card-project:focus-within .card__content {
+  .card-project:hover .card__content {
     transform: translateY(0);
     transition: transform 500ms ease-in;
   }
-
-  .card-project:focus-within .card__content {
-    transition-duration: 0ms;
+  @media (max-width: 768px) {
+    .card-project:hover .card__content {
+      transform: translateY(15%);
+    }
   }
 
-  .card-project:hover .card__background,
-  .card-project:focus-within .card__background {
-    transform: scale(1.3);
+
+
+  .card-project:hover .card__background {
+    transform: scale(1.2);
   }
 
-  .card-project:hover .card__content--container> :not(.card__title),
-  .card-project:focus-within .card__content--container> :not(.card__title) {
+  .card-project:hover .card__content--container> :not(.card__title) {
     opacity: 1;
     transition: opacity 500ms ease-in;
     transition-delay: 1000ms;
   }
 
-  .card-project:hover .card__title::after,
-  .card-project:focus-within .card__title::after {
+  .card-project:hover .card__title::after {
     opacity: 1;
     transform: scaleX(1);
     transform-origin: left;
     transition: opacity 500ms ease-in, transform 500ms ease-in;
     transition-delay: 500ms;
   }
+}
+
+@media (max-width: 768px) {
+  .projects {
+    grid-template-columns: repeat(1, auto);
+  }
+
+  .card-project {
+    max-width: 25rem;
+    height: 28.125rem;
+  }
+
+  .card__background {
+    max-width: 100%;
+    height: 100%;
+  }
+
+  .card__background {
+    max-width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .projects h2 {
+    font-size: 1.8rem;
+  }
+  .projects p {
+    font-size: 0.9rem;
+  }
+
+  
 }
